--- a/pom.xml
+++ b/pom.xml
@@ -1,53 +1,44 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>devops66</groupId>
-	<artifactId>project66</artifactId>
-	<version>1.0-SNAPSHOT</version>
-	<packaging>war</packaging>
-	
-	<properties>
-        <java.version>1.8</java.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <maven.compiler.source>${java.version}</maven.compiler.source>
-        <maven.compiler.target>${java.version}</maven.compiler.target>
+<?xml version="1.0"?>
 
-		<leap.version>0.6.2b</leap.version>
-        <slf4j.version>1.7.5</slf4j.version>
-        <logback.version>1.0.13</logback.version>		
-	</properties>
+-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0">
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.eclipse.jetty</groupId>
-                <artifactId>jetty-maven-plugin</artifactId>
-                <version>9.4.5.v20170502</version>
-            </plugin>
-        </plugins>
-    </build>
+<modelVersion>4.0.0</modelVersion>
 
-	<dependencies>
-	    <dependency>
-	        <groupId>org.leapframework</groupId>
-	        <artifactId>leap</artifactId>
-	        <version>${leap.version}</version>
-	        <type>pom</type>
-	    </dependency>
+<groupId>testproject</groupId>
 
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${slf4j.version}</version>
-            <type>jar</type>
-        </dependency>
+<artifactId>ProjectWeb</artifactId>
 
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>${logback.version}</version>
-            <type>jar</type>
-        </dependency>        
-	</dependencies>
+<packaging>war</packaging>
+
+<version>2.0</version>
+
+<name>ProjectWeb Maven Webapp</name>
+
+<url>http://maven.apache.org</url>
+
+
+-<dependencies>
+
+
+-<dependency>
+
+<groupId>junit</groupId>
+
+<artifactId>junit</artifactId>
+
+<version>3.8.1</version>
+
+<scope>test</scope>
+
+</dependency>
+
+</dependencies>
+
+
+-<build>
+
+<finalName>devops66</finalName>
+
+</build>
+
 </project>
